歌曲列表总算有个型了
目前歌曲列表总算符合自己的最低预期了，之后就得添加右键的动作以及增添对音乐播放的控制等。

--- a/res.qrc
+++ b/res.qrc
@@ -40,5 +40,9 @@
         <file>images/winIcon_40.png</file>
         <file>images/winIcon_50.png</file>
         <file>images/winIcon_100.png</file>
+        <file>images/AdditionIcon.png</file>
+        <file>images/threeLineIcon.png</file>
+        <file>images/closeListIcon.png</file>
+        <file>images/openListIcon.png</file>
     </qresource>
 </RCC>
