暂时实现了在一个按钮的窗体内有多个列表可以只播放一首歌曲

--- a/res.qrc
+++ b/res.qrc
@@ -44,5 +44,6 @@
         <file>images/threeLineIcon.png</file>
         <file>images/closeListIcon.png</file>
         <file>images/openListIcon.png</file>
+        <file>images/musicianIcon.png</file>
     </qresource>
 </RCC>
