--- a/res.qrc
+++ b/res.qrc
@@ -49,5 +49,6 @@
         <file>images/addToList_40.png</file>
         <file>images/tri_30.png</file>
         <file>images/tri_40.png</file>
+        <file>images/playerIcon2.png</file>
     </qresource>
 </RCC>
