在“更多”窗体中增添了打开Haku源代码的按钮

--- a/res.qrc
+++ b/res.qrc
@@ -51,5 +51,8 @@
         <file>images/tri_40.png</file>
         <file>images/playerIcon2.png</file>
         <file>images/defaultBig.jpg</file>
+        <file>images/kugou.png</file>
+        <file>images/kugou2.png</file>
+        <file>images/github2.png</file>
     </qresource>
 </RCC>
